--- a/jni4net.proxygen/src/jni4net.proxygen.csproj
+++ b/jni4net.proxygen/src/jni4net.proxygen.csproj
@@ -1,18 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C2DA57E7-0E1C-4103-9775-2962CAD63C49}</ProjectGuid>
     <OutputType>Exe</OutputType>
+    <DebugType>full</DebugType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>net.sf.jni4net.proxygen</RootNamespace>
     <AssemblyName>proxygen</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <FileAlignment>512</FileAlignment>
-    <StartupObject>net.sf.jni4net.proxygen.Program</StartupObject>
+    <StartupObject></StartupObject>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -32,7 +35,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\target\</OutputPath>
     <IntermediateOutputPath>..\target\obj\</IntermediateOutputPath>
@@ -42,12 +45,8 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Prefer32Bit>false</Prefer32Bit>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
   <ItemGroup>
     <Compile Include="config\toolConfig.cs">
       <DependentUpon>toolConfig.xsd</DependentUpon>
@@ -66,7 +65,6 @@
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="config\toolConfig.xsd">
       <CustomToolNamespace>net.sf.jni4net.tool.config</CustomToolNamespace>
     </None>
@@ -85,20 +83,16 @@
     <Compile Include="generator\JVMStaticGenerator.cs" />
     <Compile Include="model\Repository.CLR.cs" />
     <Compile Include="model\Repository.JVM.cs" />
-    <None Include="proxygen.exe.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\jni4net.n\src\jni4net.n.csproj">
-      <Project>{774aed55-b9ec-4c7d-8eeb-1b2481c578b2}</Project>
-      <Name>jni4net.n</Name>
-    </ProjectReference>
+    <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\..\jni4net.n\src\jni4net.n.csproj" />
+  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
