--- a/jni4net.proxygen/src/Properties/launchSettings.json
+++ b/jni4net.proxygen/src/Properties/launchSettings.json
@@ -3,9 +3,9 @@
     "jni4net.proxygen": {
       "commandName": "Project",
       "commandLineArgs": "moex-rms.proxygen.xml ",
-      "workingDirectory": "X:\\Projects\\ExtendableApp\\LimitsControl\\rms",
+      "workingDirectory": "X:\\Projects\\ExtendableApp\\LimitsControl\\rms ",
       "environmentVariables": {
-        "JAVA_HOME": "C:\\Program Files\\Java\\jre1.8.0_181"
+        "JAVA_HOME": "C:\\Program Files\\Java\\jdk1.8.0_181"
       }
     }
   }
