--- a/jni4net.proxygen/src/jni4net.proxygen.csproj
+++ b/jni4net.proxygen/src/jni4net.proxygen.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>..\target\</OutputPath>
     <IntermediateOutputPath>..\target\obj\</IntermediateOutputPath>
     <DefineConstants>
